--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Ddkits\\Ddkitsfacebook\\": "packages/ddkits/ddkitsfacebook/src/"
         }
     },
     "autoload-dev": {
